# habit_tracker

./: .env  .env.example  .flake8  .gitignore  .pylintrc  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: babaefe31d36_add_habit_completions_table.py  d0e14185a351_add_users_table_and_owner_id_to_habits.py
app/: __init__.py  auth.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
scripts/: format.py  lint.py
